--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -5,6 +5,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                    <button type="button" id="sidebarLeftCollapse" class="btn btn-info btn-sm">
+                        <i class="fas fa-align-left"></i>
+Hide left sidebar
+                    </button>
+
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Participants
@@ -76,9 +83,9 @@
                 </ul>
             </li>
             <li class="nav-item">
-                    <button type="button" id="sidebarCollapse" class="btn btn-info btn-sm">
+                    <button type="button" id="sidebarRightCollapse" class="btn btn-info btn-sm">
                         <i class="fas fa-align-left"></i>
-                        <span>Hide sidebar</span>
+Hide right sidebar
                     </button>
 
             </li>
