--- a/templates/sidebar_left.html
+++ b/templates/sidebar_left.html
@@ -1,19 +1,27 @@
 {% block sidebar_left %}
-        <ul class="list-unstyled components">
+<ul class="collapse components navbar-nav">
+{% load colored_link %}
+    {% if sidebar %}
+    {% if sidebar.taxonomy %}
+    <li >
+        <h3> <a href="#taxonomySubMenu" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle">Taxonomy</a></h3>
+        <ul class="collapse list-unstyled show" id="taxonomySubMenu">
+            {% for ptype, list in sidebar.taxonomy.items %}
             <li>
-
-                {% if sidebar %}
-                {% if sidebar.participants %}
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Participants</a>
-                <ul class="collapse list-unstyled" id="pageSubmenu">
-                    {% for p in sidebar.participants %}
+                <h5>  <a href="#ap_{{ptype|cut:' '}}" data-toggle="collapse"  aria-expanded="true" class="dropdown-toggle"  >{{ ptype}}</a></h5>
+                <ul class="collapse list-unstyled show" id="ap_{{ptype|cut:' '}}">
+                    {% for p in list %}
                     <li>
-                        <a href="{{p.link}}">{{p.name}}</a>
+                        {% colored_link p.name p.color_code p.link %}
+                        {% endfor%}
                     </li>
-                    {% endfor%}
                 </ul>
-                {% endif %}
-                {% endif %}
             </li>
+
+            {% endfor %}
         </ul>
+    </li>
+    {% endif %}
+    {% endif %}
+</ul>
 {% endblock %}
