reorganize base.html

--- a/templates/confabulation/chainView.html
+++ b/templates/confabulation/chainView.html
@@ -1,4 +1,4 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 {% block title %}{{chain.name}}{% endblock %}
 {% block content %}
 {% if chain %}
