--- a/templates/confabulation/connectionView.html
+++ b/templates/confabulation/connectionView.html
@@ -1,4 +1,4 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %} Connection: {{connection.name}}{% endblock %}
 {% load chain_with_theme_list %}
