--- a/templates/confabulation/themeView.html
+++ b/templates/confabulation/themeView.html
@@ -1,4 +1,4 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 {% block title %}{{theme.name}}{% endblock %}
 {% block content %}
 {% if theme %}
