--- a/templates/confabulation/analysisTypeView.html
+++ b/templates/confabulation/analysisTypeView.html
@@ -1,4 +1,4 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 {% block title %} Analysis Type: {{analysis_type.name}}{% endblock %}
 
 {% load colored_link %}
