--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -1,4 +1,4 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 {% block title %}{{participant.name}}{% endblock %}
 {% load story_list %}
 {% load chain_list %}
