--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -5,6 +5,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+            {% if sidebar_left %}
             <li class="nav-item">
                     <button type="button" id="sidebarLeftCollapse" class="btn btn-info btn-sm">
                         <i class="fas fa-align-left"></i>
@@ -12,6 +13,7 @@ Hide left sidebar
                     </button>
 
             </li>
+            {% endif %}
             <li class="nav-item dropdown">
                 <a class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Participants
@@ -63,6 +65,7 @@ Hide left sidebar
                     </li>
                 </ul>
             </li>
+            {% if sidebar_right %}
             <li class="nav-item">
                     <button type="button" id="sidebarRightCollapse" class="btn btn-info btn-sm">
                         <i class="fas fa-align-left"></i>
@@ -70,6 +73,7 @@ Hide right sidebar
                     </button>
 
             </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
