--- a/templates/confabulation/analysisView.html
+++ b/templates/confabulation/analysisView.html
@@ -1,4 +1,4 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 {% load story_list_thumb %}
 {% load colored_title %}
 {% block title %} Analysis: {{analysis_point.name}}{% endblock %}
