--- a/templates/confabulation/eraView.html
+++ b/templates/confabulation/eraView.html
@@ -1,4 +1,7 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
+{% block content %}
 <h1>{{era.name}}</h1>
 
 {{era.description}}
+
+{% endblock %}
