--- a/templates/confabulation/storyView.html
+++ b/templates/confabulation/storyView.html
@@ -1,7 +1,8 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Story: {{story.name}}{% endblock %}
 {% block content %}
+{% load colored_link %}
 {% if story %}
 
 <div class="story">
@@ -13,9 +14,7 @@
 
     Era:
     {% for era in eras %}
-    <a href="/eras/{{era.id}}">
-        <font color="{{era.color_code}}" data-toggle="tooltip" data-placement="right" title="{{era.description}}" >{{ era.name }}</font>
-    </a>
+    {% colored_link era.name era.color_code era.url era.description %}
     {% endfor %}
     {% endif %}
 </br>
@@ -31,7 +30,7 @@ Keywords:
 <ul>
     {% for a in analysis %}
     <li>
-        <a href="/analysis/{{a.id}}/" data-toggle="tooltip" data-placement="right" title="{{a.description}}">       <font color="{{a.color_code}}">{{a.name}}</font></a>
+        {% colored_link a.name a.color_code a.url a.description %}
     </li>
     {% endfor %}
 </ul>
