--- a/templates/confabulation/video_view.html
+++ b/templates/confabulation/video_view.html
@@ -1,7 +1,6 @@
-{% extends 'confabulation/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Video {{video.name}}{% endblock %}
-§
 {% block content %}
 <h1>Video {{video.name}}</h1>
         <video width="530" height="440" controls >
