expandable story list 1
there is a bug: some submenus dont open. they are the ones that have "'" in them
fix: ids cant start with numbers!

--- a/templates/sidebar_right.html
+++ b/templates/sidebar_right.html
@@ -36,7 +36,7 @@
             {% chain_list sidebar_right.interconnections %}
             <h5>Themes</h5>
             {% for ic in sidebar_right.interconnections %}
-            {% theme_list ic.themes %}
+            {% theme_with_story_list ic.themes %}
             {% endfor %}
 
         </div>
@@ -49,5 +49,5 @@
         </div>
     {% endif %}
 </ul>
-{% endif %}
+{% endif %} 
 {% endblock %}
