--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -39,7 +39,6 @@
 }
 
 .sidebar ul li a {
-    padding: 10px;
     font-size: 1.1em;
     display: block;
 }
@@ -170,7 +169,7 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
 }
 
 .chain {
-    display: inline;
+    display: inline-block;
     border: 1px solid grey;
     border-radius: 5px;
     border-left: 10px solid #1A0584;
@@ -180,7 +179,6 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
 
 .chain:hover {
     text-decoration: none;
-    display: inline;
     border: 1px solid grey;
     border-left: 10px solid #6A5EA5;
     padding: 3px;
