--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -40,7 +40,7 @@
 
 .sidebar ul li a {
     font-size: 1.1em;
-    display: block;
+    display: inline;
 }
 .sidebar ul li a:hover {
     background: #fff;
@@ -57,9 +57,9 @@ a[data-toggle="collapse"] {
     position: relative;
 }
 
-.dropdown-toggle::after {
+.dropdown-toggle::before {
     display: block;
-    position: absolute;
+    /* position: absolute; */
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
@@ -169,7 +169,7 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
 }
 
 .chain {
-    display: inline-block;
+    display: block;
     border: 1px solid grey;
     border-radius: 5px;
     border-left: 10px solid #1A0584;
