front page video

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -6,9 +6,15 @@
 <div class="body_text" id="front_body">
     <h1>Welcome</h1>
 
-<p>This website is a visual representation of the PhD research work of <a href="/author">Eszter Biro</a>. You can read <a href="/about"> about the research here</a>, and you can read the entire thesis work <a href="">here</a> </p>
+<p>This website is a visual representation of the PhD research work of <a href="/author">Eszter Biro</a>. You can read <a href="/about"> about the research here</a>, and you can read the entire thesis work <a href="">here</a>. </p>
 <p>
-    Or you can just start browsing.
+    <b>Here is a short intorduction about the taxonomy used in this research:</b>
+</br>
+<video width="530" height="440" controls >
+            <source src={{ video_url }} type="video/mp4"></source>
+        </video>
+
+</br> Or you can just start browsing.
     <h3><a href="/participant/">Participants</a></h3>
     <h3><a href="/story/">Stories</a></h3>
 </p>
