--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Story Telling Database</title>
+        <title>{{ site_name }}</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,7 +18,7 @@
         <script src={% static 'mystyles.js' %}></script>
         <div class="container-fluid" id="page-header">
 
-            <h1><a href="/">{% if debug %}LOCAL DB{%else%}Story Telling Database{%endif%}</a></h1>
+            <h1><a href="/">{{ site_name }}</a></h1>
             {% if navigation %}
             {% block navigation %}
 {% include 'navigation.html' %}
