--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Story Telling Database{% endblock %}
+{% block title %}{{site_name}}{% endblock %}
 
 {% block content %}
 <div class="body_text" id="front_body">
