--- a/templates/sidebar_right.html
+++ b/templates/sidebar_right.html
@@ -3,7 +3,6 @@
 {% load chain_list %}
 {% load theme_list %}
 {% load theme_with_story_list %}
-{% load chainless_theme_with_story_list %}
 {% load chain_with_theme_list %}
 {% if sidebar_right %}
 <ul class="list-unstyled components">
@@ -13,10 +12,20 @@
         <div class="collapse show" id="intraSubmenu">
             <h5>Chains</h5>
             {% chain_with_theme_list sidebar_right.intraconnections %}
+            <!-- <h5>Themes</h5>
+                 {% for ic in sidebar_right.intraconnections %}
+                 {% theme_with_story_list ic.themes %}
+                 {% endfor %}
+               -->
         </div>
-        <div>
-            <h5>Themes</h5>
-            {% chainless_theme_with_story_list sidebar_right.chainless_theme_intra %}
+    </li>
+    {% endif%}
+    {% if sidebar_right.chainless_themes_intra %}
+    <li>
+        <h5><a href="#intraChainlessSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Themes</a></h5>
+        <div class="collapse show" id="intraChainlessSubmenu">
+            <!-- <h5>Themes</h5> -->
+            {% theme_with_story_list sidebar_right.chainless_themes_intra %}
         </div>
     </li>
     {% endif %}
@@ -27,7 +36,7 @@
             <h5>Chain</h5>
             {% chain_list sidebar_right.interconnections %}
             <h5>Themes</h5>
-            {% for ic in sidebar_right.chainless_themes_inter %}
+            {% for ic in sidebar_right.interconnections %}
             {% theme_with_story_list ic.themes %}
             {% endfor %}
 
