--- a/templates/confabulation/participantView.html
+++ b/templates/confabulation/participantView.html
@@ -28,10 +28,10 @@
         <div class="col p2">
             <h1>Intraconnections</h1>
             <h3>Chains</h3>
-            {% chain_with_theme_list intraconnections %}
+            {% chain_with_theme_list intraconnections "intra"%}
             <h3>Themes</h3>
             {% for ic in intraconnections %}
-            {% theme_with_story_list ic.themes %}
+            {% theme_with_story_list ic.themes "intra" %}
             {% endfor %}
 
         </div>
@@ -39,7 +39,7 @@
         <div class="col p2">
             <h1>Intraconnections</h1>
             <h3>Themes</h3>
-            {% theme_with_story_list chainless_themes %}
+            {% theme_with_story_list chainless_themes "intra" %}
         </div>
         {% endif %}
         {% if interconnections %}
