--- a/templates/confabulation/themeView.html
+++ b/templates/confabulation/themeView.html
@@ -4,7 +4,7 @@
 {% if theme %}
 
 <h1> {{ theme.name }}</h1>
-<h5>{{theme.connection_range}}</h5>
+<h5> {{ connection_range }}</h5>
 
 {{theme.description}}
 
