--- a/templates/sidebar_right.html
+++ b/templates/sidebar_right.html
@@ -1,16 +1,14 @@
 {% block sidebar_right %}
 {% load story_list %}
-{% load chain_list %}
-{% load theme_list %}
 {% load theme_with_story_list %}
 {% load chain_with_theme_list %}
 {% if sidebar_right %}
 <ul class="list-unstyled components">
     {% if sidebar_right.intraconnections %}
     <li>
-        <h3><a href="#intraSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Intraconnections</a></h3>
+        <h3> Intraconnections</h3>
+            <h5><a href="#intraSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chains</a></h5>
         <div class="collapse show" id="intraSubmenu">
-            <h5>Chains</h5>
             {% chain_with_theme_list sidebar_right.intraconnections "intra" %}
         </div>
     </li>
@@ -26,18 +24,21 @@
     {% endif %}
     {% if sidebar_right.interconnections %}
     <li>
-        <h3><a href="#interSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Interconnections</a></h3>
+        <h3>Interconnections</h3>
+            <h5><a href="#interSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chain</a></h5>
         <div class="collapse show" id="interSubmenu">
-            <h5>Chain</h5>
-            {% chain_list sidebar_right.interconnections %}
-            <h5>Themes</h5>
+            {% chain_with_theme_list sidebar_right.interconnections "inter" %}
+        </div>
+    {% endif %}
+    {% if sidebar_right.chainless_themes_inter %}
+        <h5><a href="#interChainlessSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Themes</a></h5>
+        <div class="collapse show" id="interChainlessSubmenu">
             {% for ic in sidebar_right.interconnections%}
             {% theme_with_story_list ic.themes "inter"%}
             {% endfor %}
-
         </div>
-    </li>
     {% endif %}
+    </li>
     {% if sidebar_right.single_stories %}
         <h3><a href="#singleSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Unconnected Stories</a></h3>
         <div class="collapse show" id="singleSubmenu">
