fix litera comparison and tests

--- a/templates/confabulation/chainView.html
+++ b/templates/confabulation/chainView.html
@@ -6,7 +6,7 @@
 <h1> {{ chain.name }}</h1>
 
 {{chain.description}}
-<h5>{{chain.connection_range}}</h5>
+<h5>{{connection_range}}</h5>
 {% endif %}
 
 {% if themes %}
