dashes and hyphens (#72)
* dashes and hyphens

connectiontypes with dahses everywhere

* hack around db

only one point in the display i stupidly use the the value straight from the db.
here use a calculated value, and leav ethe interconnection setting in the db as
is.

* more sidebar tidyup

* fix litera comparison and tests

--- a/templates/sidebar_right.html
+++ b/templates/sidebar_right.html
@@ -6,8 +6,8 @@
 <ul class="list-unstyled components">
     {% if sidebar_right.intraconnections %}
     <li>
-        <h3> Intraconnections</h3>
-            <h5><a href="#intraSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chains</a></h5>
+        <h3> Intra-connections</h3>
+        <h5><a href="#intraSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chains</a></h5>
         <div class="collapse show" id="intraSubmenu">
             {% chain_with_theme_list sidebar_right.intraconnections "intra" %}
         </div>
@@ -24,8 +24,8 @@
     {% endif %}
     {% if sidebar_right.interconnections %}
     <li>
-        <h3>Interconnections</h3>
-            <h5><a href="#interSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chain</a></h5>
+        <h3>Inter-connections</h3>
+        <h5><a href="#interSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Chain</a></h5>
         <div class="collapse show" id="interSubmenu">
             {% chain_with_theme_list sidebar_right.interconnections "inter" %}
         </div>
@@ -40,7 +40,8 @@
     {% endif %}
     </li>
     {% if sidebar_right.single_stories %}
-        <h3><a href="#singleSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Unconnected Stories</a></h3>
+    <h3>Unconnected</h3>
+        <h5><a href="#singleSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Stories</a></h5>
         <div class="collapse show" id="singleSubmenu">
             {% story_list sidebar_right.single_stories %}
         </div>
